# godot_learning

godot/: Walking_in_place.fbx  Walking_in_place.fbx.import  abomination.gltf  abomination.gltf.import  abomination.tscn  extension_list.cfg  footsteps.wav.import  icon.svg.import  level.tscn  main_scene.tscn  player.tscn  project.godot  robot.glb  robot.glb.import  rust.gdextension.uid  test_npc.tscn  test_scene.tscn  test_sphere.tscn  walking_character.fbx.import  walking_character.res  walking_character.tscn  walking_character_0.png.import  walking_character_1.png.import  walking_character_2.png.import  walking_character_3.png.import  walking_in_place.res  (+4 more)
rust/: Cargo.toml  bacon.toml
rust/src/: actions.rs  camera.rs  clickable_object.rs  common.rs  debug.rs  finite_state_machine.rs  items.rs  lib.rs  motion_signals.rs  mouse.rs  movement.rs  movement_animations.rs  npc.rs  player.rs  shell.rs  some_state_machine.rs  states.rs  template.rs
rust/src/common/: camera.rs  finite_state_machine.rs  inventory.rs  mouse.rs  proximity_detector.rs  states.rs  ui.rs
rust/src/common/states/: lootable.rs
rust/src/common/states/lootable/: chosen.rs  hover.rs  hover_listener.rs  idle.rs  idle_listener.rs  inspect.rs  inspect_listener.rs  loot_state.rs  lootable_states.rs
rust/src/common/ui/: loot_menu.rs  loot_option.rs  loot_option_listener.rs  utils.rs
rust/src/items/: loot.rs  loot_all.rs  test_item.rs
rust/src/npc/: test_npc.rs
rust/src/states/: idle.rs  movement.rs  walking.rs
rust/src/states/movement/: context.rs  idle.rs  movement_states.rs  walking.rs
(+19 files in other folders)
