[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
anyhow = "1.0.98"
# godot = "0.2.4"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["register-docs"] }
rand = "0.9.1"
