[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[build]
rustflags = ["-g", "--opt-level=1", "RUST_BACKTRACE=1"]

[dependencies]
# godot = "0.2.4"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["register-docs"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
